<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/inputLayout"
		android:gravity="center"
		android:padding="20dp"
		android:background="@drawable/card_background">

		<TextView
			android:id="@+id/add_head"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_new_data"
			android:gravity="center"
			android:textColor="#2B3BB7"
			android:textStyle="bold"
			android:textSize="20sp"
			android:padding="10dp"/>

		<EditText
			android:layout_width="match_parent"
			android:inputType="textPersonName"
			android:layout_height="wrap_content"
			android:ems="10"
			android:drawableStart="@drawable/icon_person"
			android:hint="@string/enter_name"
			android:id="@+id/et_name"
			style="@style/EditTheme"
			android:autofillHints="" />

		<EditText
			android:layout_width="match_parent"
			android:inputType="phone"
			android:layout_height="wrap_content"
			android:ems="10"
			android:drawableStart="@drawable/icon_phone"
			android:hint="@string/enter_phone_number"
			android:id="@+id/et_phone"
			style="@style/EditTheme"
			android:autofillHints="" />

		<EditText
			android:id="@+id/et_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:drawableStart="@drawable/icon_dob"
			android:editable="false"
			android:longClickable="false"
			android:focusable="true"
			android:clickable="true"
			android:hint="@string/enter_d_o_b"
			style="@style/EditTheme"
			android:autofillHints=""
			android:inputType="date" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#ffffff"
			android:padding="10dp"
			android:layout_margin="10dp"
			android:letterSpacing="0.1"
			android:background="@drawable/button_background"
			android:text="@string/add"
			android:id="@+id/btn_add"/>

	</LinearLayout>

</ScrollView>

